Adds install-skype

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,16 @@
 *~
 .mailmap
 
-.cache/
-.retry/
-.hide/
-
-roles/
-log/
-tmp/
-ext/
-site/
+.cache
+.retry
+.hide
+roles
+log
+tmp
+ext
 
 README.html
 plugins/filter/*.pyc
-
-# fetched gist
-ansible.mk
-gist-helper.mk
-github-helper.mk
-init-play-dir.yml
 
 # generated
 ansible.cfg
@@ -26,3 +18,4 @@ ssh-config
 vars/ext/
 inventory/*.ext
 inventory/group_vars/*/*-ext.yml
+vault-pass.py
