Adds missing package for installs-skype

--- a/install-skype.yml
+++ b/install-skype.yml
@@ -45,3 +45,6 @@
         - debug: { msg: 'install {{ url }}' }
         - apt: { deb: '{{ url }}' }
           become: True
+
+    - apt: { name: libcanberra-gtk-module }
+      become: True
