--- a/requirements.yml
+++ b/requirements.yml
@@ -3,3 +3,10 @@
 - src: https://github.com/thydel/ar-regenerate-host-keys.git
   name: regenerate-host-keys
   version: master
+
+- src: geerlingguy.packer-debian
+
+- src: https://github.com/tompscanlan/ansible-role-vmware-workstation.git
+  name: vmware-workstation
+
+- src: jdauphant.vagrant
