--- a/install-vagrant.yml
+++ b/install-vagrant.yml
@@ -54,7 +54,8 @@
     - tags: get-files
       vars: &files
         debdir: /usr/local/dist
-        version: 1.9.8
+        # version: 1.9.8
+        version: 2.0.0
         site: 'https://releases.hashicorp.com'
         base: vagrant/{{version}}/vagrant_{{version}}
         deb: '{{ base }}_{{ansible_architecture}}.deb'
