--- a/user-ssh-agent.yml
+++ b/user-ssh-agent.yml
@@ -25,7 +25,7 @@
               [Service]
               Type=simple
               Environment=SSH_AUTH_SOCK=%t/{{ service }}.socket
-              ExecStart=/usr/bin/ssh-agent -D -a $SSH_AUTH_SOCK
+              ExecStart=/usr/bin/ssh-agent -D -a $SSH_AUTH_SOCK -t 1d
               
               [Install]
               WantedBy=default.target
