--- a/install-duplicity.yml
+++ b/install-duplicity.yml
@@ -5,45 +5,35 @@
   hosts: all
 
   vars:
-    name: duplicity
+    aname: duplicity
     serie: 0.7
     version: 18.2
-    base: '{{ name }}-{{ serie }}.{{ version }}'
+    base: '{{ aname }}-{{ serie }}.{{ version }}'
     targz: '{{ base }}.tar.gz'
-    url: >
-      https://code.launchpad.net/{{name }}/
+    urlt: >
+      https://code.launchpad.net/{{ aname }}/
       {{ serie }}-series/{{ serie }}.{{ version }}/
       +download/{{ targz }}
+    url: '{{ urlt | replace(" ", "") }}'
     local: /usr/local
+    tmp: '{{ local }}/tmp'
+    src: '{{ local }}/src'
+    bin: '{{ local }}/bin'
 
   tasks:
     - name: Get release from official site
       environment: '{{ proxy_env | default({}) }}'
       get_url:
-        url: '{{ url | replace(" ", "") }}'
+        url: '{{ url }}'
         dest: '{{ playbook_dir }}/tmp'
       delegate_to: localhost
 
-    - name: Make tmp dir
-      file:
-        path: &tmp '{{ local }}/tmp'
-        state: directory
-      become: True
-
-    - name: Push tar
-      copy:
-        src: tmp/{{ targz }}
-        dest: *tmp
-      become: True
-
     - name: Extract tar
-      command: tar zxvf {{ tmp }}/{{ targz }} --no-same-owner
-      args:
-        chdir: '{{ src }}'
+      unarchive:
+        src: tmp/{{ targz }}
+        dest: '{{ local }}/src'
+        extra_opts: --no-same-owner
         creates: '{{ src }}/{{ base }}'
-      vars: &vars
-        src: '{{ local }}/src'
-        tmp: *tmp
       become: True
 
     - name: Install deps
@@ -55,8 +45,5 @@
       command: python setup.py install --prefix={{ local }} --record files.txt
       args:
         chdir: '{{ src }}/{{ base }}'
-        creates: '{{ bin }}/{{ name }}'
-      vars:
-        <<: *vars
-        bin: '{{ local }}/bin'
+        creates: '{{ bin }}/{{ aname }}'
       become: True
